Test_Try/src/objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <label>Check In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Data__c</fullName>
        <label>Check Out Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Reservation__c</fullName>
        <label>Date Of Reservation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Reserv-{0000}</displayFormat>
        <label>Reservation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>